Table users {
  id serial [pk, increment]
}

Table teams {
  id serial [pk, increment]
  project_id integer [ref: > projects.id] 
}

Table projects {
  id serial [pk, increment]
}

Table artifacts {
  id serial [pk, increment]
}

Table news {
  id serial [pk, increment]
}

Table notifications {
  id serial [pk, increment]
  news_id integer [ref: > news.id]
}

Table u_to_t {
  user_id integer [ref: > users.id]
  team_id integer [ref: > teams.id]
}

Table a_to_p {
  artifact_id integer [ref: > artifacts.id]
  project_id integer [ref: > projects.id]
}

Table a_to_t {
  artifact_id integer [ref: > artifacts.id]
  team_id integer [ref: > teams.id]
}

Table n_to_u {
  notification_id integer [ref: > notifications.id]
  user_id integer [ref: > users.id]
}